style(web): adjust the time option wrap issue on small screen

--- a/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
+++ b/web/components/SubstainabilityChart/SubstainabilityChart.module.scss
@@ -17,8 +17,12 @@
   flex: 1;
 }
 
-.chartHeader {
-  text-align: right;
+.timeOptions {
+  white-space: nowrap;
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .mobileTable {
